--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ a {
 }
 img {
   vertical-align: middle;
+  display: inline-block;
 }
 ul,
 li,
@@ -379,3 +380,113 @@ main .achivmentContant_section .achivment_contant p {
   color: var(--black-font);
 }
 /* Why us Section */
+
+/* What We Do Section */
+#we_do {
+  background: #f6f5ff;
+}
+#we_do .we_do_container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+  justify-content: center;
+  align-items: center;
+  padding: 100px 0px;
+}
+#we_do .we_do_summary {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  max-width: 300px;
+}
+#we_do .we_do_summary h2 {
+  font-family: var(--normal-font);
+  font-size: 38px;
+  font-weight: 700;
+  color: var(--black-font);
+}
+#we_do .we_do_summary p {
+  font-family: var(--normal-font);
+  font-size: 18px;
+  line-height: 32px;
+  letter-spacing: 0.5px;
+  text-align: justify;
+}
+#we_do .we_do_summary .btn {
+  padding: 20px 40px;
+}
+#we_do .we_do_summary .btn:hover {
+  color: var(--black-font);
+}
+#we_do .we_do_cards {
+  padding: 40px 25px;
+  max-width: 300px;
+  min-height: ;
+  background: var(--white-color);
+  box-shadow: 0px 30px 60px 0px rgba(162, 169, 192, 0.1);
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  align-items: center;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+}
+#we_do .we_do_cards:hover {
+  background: var(--secondary-color);
+}
+#we_do .we_do_cards:hover .weDoCard_contant h3,
+#we_do .we_do_cards:hover .weDoCard_contant p,
+#we_do .we_do_cards:hover .weDoCard_contant button {
+  color: var(--white-color);
+}
+#we_do .we_do_cards img {
+  max-width: 64px;
+}
+#we_do .weDoCard_contant {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+}
+#we_do .weDoCard_contant h3 {
+  font-size: 25px;
+  font-family: var(--normal-font);
+  font-weight: 700;
+  line-height: 35px;
+  color: var(--black-font);
+}
+#we_do .weDoCard_contant p {
+  font-family: var(--italic-font);
+  color: var(--light-font);
+  text-align: center;
+  line-height: 30px;
+}
+#we_do .we_do_cards button {
+  padding: 8px 10px;
+  background: transparent;
+  border: none;
+  font-family: var(--normal-font);
+  font-size: 16px;
+  font-weight: 700;
+  position: relative;
+  color: var(--black-font);
+}
+#we_do .we_do_cards button span {
+  border-radius: 0px 100px 100px 0px;
+  background: var(--green-color);
+  opacity: 0.3;
+  padding: 8px 10px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 10px;
+}
+/* What We Do Section */
