--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 /* Google fonts */
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Paprika&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap");
 /* Common CSS style */
 * {
   margin: 0;
@@ -796,21 +797,64 @@ main .achivmentContant_section .achivment_contant p {
   -o-border-radius: 20px;
   box-shadow: -15px 30px 50px 0px rgba(171, 175, 199, 0.3);
 }
-#about_us .aboutUsContainer::before {
-  content: ">";
+#about_us .aboutUsContainer .rightbutton {
   width: 54px;
   height: 54px;
-  display: block;
   background: var(--green-color);
   border-radius: 50%;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
-  text-align: center;
-  line-height: 54px;
-  font-size: 54px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  color: var(--white-color);
+  position: absolute;
+  right: -100px;
+  bottom: 50%;
+  opacity: 0.2;
+  transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
 }
+#about_us .aboutUsContainer .leftbutton {
+  width: 54px;
+  height: 54px;
+  background: var(--green-color);
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  color: var(--white-color);
+  position: absolute;
+  left: -100px;
+  bottom: 50%;
+  opacity: 0.2;
+  transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+}
+#about_us .aboutUsContainer .rightbutton:hover,
+#about_us .aboutUsContainer .leftbutton:hover {
+  opacity: 1;
+  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
+}
+
 #about_us .aboutUsContainer img {
   border-radius: 50%;
   -webkit-border-radius: 50%;
@@ -829,7 +873,7 @@ main .achivmentContant_section .achivment_contant p {
   -ms-transform: translateX(-50%);
   -o-transform: translateX(-50%);
 }
-#about_us .aboutUsContainer span {
+#about_us .aboutUsContainer > span {
   color: orange;
   display: flex;
   gap: 10px;
@@ -861,3 +905,169 @@ main .achivmentContant_section .achivment_contant p {
   line-height: 25px;
 }
 /* About us section */
+/* You May Also like Section */
+#alsoLike {
+  background: url(images/Vector4.png);
+  background-repeat: no-repeat;
+  background-position: bottom left;
+  padding: 100px 0;
+}
+#alsoLike .alsoLikeSection {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+#alsoLike h2 {
+  font-size: 40px;
+  font-weight: 700;
+  font-family: var(--normal-font);
+  line-height: 65px;
+  color: var(--black-font);
+  margin-bottom: 30px;
+  letter-spacing: -2px;
+}
+#alsoLike .alsoLikeContainer {
+  display: flex;
+  max-width: 970px;
+  align-items: center;
+  justify-content: space-between;
+}
+#alsoLike .alsoLikeContainer .imgContainer {
+  max-width: 379px;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+  overflow: hidden;
+}
+#alsoLike .alsoLikeContainer img {
+  width: 379px;
+  transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+}
+#alsoLike .alsoLikeContainer .imgContainer:hover img {
+  transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+  -moz-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  -o-transform: scale(1.2);
+}
+#alsoLike .alsoLikeContainer .summery {
+  display: flex;
+  flex-direction: column;
+  row-gap: 16px;
+  align-items: flex-start;
+  max-width: 500px;
+}
+#alsoLike .alsoLikeContainer .summery .summeryHeader {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 30px;
+  color: var(--light-font);
+  font-family: Quicksand;
+  font-weight: 500;
+  line-height: 25px;
+}
+#alsoLike .alsoLikeContainer .summery .summeryHeader p:hover {
+  color: var(--green-color);
+  font-weight: 600;
+}
+#alsoLike .alsoLikeContainer .summery .summeryMain h3 {
+  font-family: var(--normal-font);
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 55px;
+  letter-spacing: -1.5px;
+  color: var(--black-font);
+}
+
+#alsoLike .alsoLikeContainer .summery button {
+  border-radius: 100px;
+  -webkit-border-radius: 100px;
+  -moz-border-radius: 100px;
+  -ms-border-radius: 100px;
+  -o-border-radius: 100px;
+  padding: 8px 10px;
+  border: transparent;
+  font-family: var(--normal-font);
+  font-size: 16px;
+  font-weight: 700;
+  background: transparent;
+  position: relative;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+}
+#alsoLike .alsoLikeContainer .summery button span {
+  width: 27px;
+  height: 40px;
+  border-radius: 0 100px 100px 0;
+  -webkit-border-radius: 0 100px 100px 0;
+  -moz-border-radius: 0 100px 100px 0;
+  -ms-border-radius: 0 100px 100px 0;
+  -o-border-radius: 0 100px 100px 0;
+  background: var(--green-color);
+  position: absolute;
+  opacity: 0.3;
+  top: 0;
+  right: 0;
+}
+#alsoLike .alsoLikeContainer .summery button:hover {
+  background: var(--green-color);
+  opacity: 0.5;
+  color: var(--white-color);
+}
+/* You May Also like Section  */
+
+/* Footer Seciton */
+footer {
+  background: var(--footer-color);
+  color: #fefefe;
+  height: 70vh;
+  font-family: Quicksand;
+  opacity: 0.9;
+  display: flex;
+  align-items: center;
+}
+footer .footerSection {
+  display: flex;
+  align-items: baseline;
+  gap: 100px;
+}
+.footerWithLogo {
+  max-width: 400px;
+  line-height: 30px;
+}
+footer .footerSection .footerDiv {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+footer .footerSection h4 {
+  font-size: 24px;
+}
+footer .footerSection img {
+  width: 135px;
+}
+footer .footerSection .footerDiv > a {
+  color: #fefefe;
+}
+footer .footerSection a:hover,
+footer .footerSection_footer a:hover {
+  color: var(--green-color);
+}
+footer .footerSection_footer {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 100px;
+}
+footer .footerSection_footer a {
+  color: #fefefe;
+}
